# ai-summarizer

./: .gitignore  app.py  main.ipynb  main.py  requirements.txt
ai-summarizer/: .gitignore  app.py  pyproject.toml
